--- a/src/app/products/product-detail/product-detail.component.html
+++ b/src/app/products/product-detail/product-detail.component.html
@@ -10,58 +10,28 @@
         <!-- Poduct Gallery-->
         <div class="col-md-6">
           <div class="product-gallery">
-            <span *ngIf="product.reduction" class="product-badge text-danger">{{product.reduction}}% Off</span>
             <div class="product-gallery-image" [ngClass]="{'loading': !imagesLoaded.includes(activeImageUrl)}">
-                <img [hidden]="!imagesLoaded.includes(activeImageUrl)" class="img-fluid" src="{{activeImageUrl}}" alt="{{product.name}}" (load)="onImageLoad($event)">
+
+                <img class="img-fluid"
+                     src="https://firebasestorage.googleapis.com/v0/b/bargain-online.appspot.com/o/{{product.imageURLs}}?alt=media"
+                     alt="{{product.name}}" (load)="onImageLoad($event)">
             </div>
-            <ul class="product-thumbnails">
-              <li *ngFor="let image of product.imageURLs; let i = index" [ngClass]="{'active': i === activeImageIndex}">
-                <a href="" (click)="onSelectThumbnail($event, i)" class="product-thumbnail-image" [ngClass]="{'loading': !imagesLoaded.includes(activeImageUrl)}">
-                  <img [hidden]="!imagesLoaded.includes(image)" [src]="image" alt="{{product.name}}" (load)="onImageLoad($event)">
-                </a>
-              </li>
-            </ul>
           </div>
         </div>
         <!-- Product Info-->
         <div class="col-md-6">
           <div class="padding-top-2x mt-2 hidden-md-up"></div>
-          <app-rating-stars [rating]="product.currentRating"></app-rating-stars>
-          <span *ngIf="product.ratings" class="text-muted align-middle">{{ ratingCount }} customer reviews</span>
           <h2 class="padding-top-1x text-normal">{{ product.name }}</h2>
           <span class="h2 d-block">
             <app-price [product]="product"></app-price>
           </span>
+
           <p>{{product.description}}</p>
           <div class="row margin-top-1x">
-            <!-- <div class="col-sm-4">
-              <div class="form-group">
-                <label for="size">Men's size</label>
-                <select class="form-control" id="size">
-                  <option>Chooze size</option>
-                  <option>11.5</option>
-                  <option>11</option>
-                  <option>10.5</option>
-                  <option>10</option>
-                  <option>9.5</option>
-                  <option>9</option>
-                  <option>8.5</option>
-                </select>
-              </div>
-            </div> -->
-            <!-- <div class="col-sm-5">
-              <div class="form-group">
-                <label for="color">Choose color</label>
-                <select class="form-control" id="color">
-                  <option>White/Red/Blue</option>
-                  <option>Black/Orange/Green</option>
-                  <option>Gray/Purple/White</option>
-                </select>
-              </div>
-            </div> -->
+
             <div class="col-sm-3">
               <div class="form-group">
-                <label for="quantity">Quantity</label>
+                <label for="quantity">Cantidad</label>
                 <select class="form-control" id="quantity" (change)="onSelectQuantity($event)">
                   <option value="1">1</option>
                   <option value="2">2</option>
@@ -73,43 +43,16 @@
             </div>
           </div>
           <div class="pt-1 mb-2">
-            <span class="text-medium">SKU:</span> {{ product.id }}
-          </div>
-          <div class="padding-bottom-1x mb-2">
-            <span *ngIf="product.categories" class="text-medium">Categories:&nbsp;</span>
-            <a *ngFor="let category of product.categories" class="navi-link" href="#">{{ category }}{{' '}}</a>
-          </div>
-          <div class="form-group" *ngIf="user">
-            <label for="review_rating">Your Rating</label>
-              <select class="form-control form-control-rounded" name="rating" [(ngModel)]="selectedRating" (change)="onRate()">
-                <option *ngFor="let value of ratingValues" [value]="value">{{ value }} Stars</option>
-              </select>
+            <span class="text-medium">Referencia de producto:</span> {{ product.id }}
           </div>
           <hr class="mb-3">
           <div class="d-flex flex-wrap justify-content-between">
             <div class="entry-share mt-2 mb-2">
-              <span class="text-muted">Share:</span>
-              <div class="share-links">
-                <a class="social-button shape-circle sb-facebook" href="#" data-toggle="tooltip" data-placement="top" title="Facebook">
-                  <i class="socicon-facebook"></i>
-                </a>
-                <a class="social-button shape-circle sb-twitter" href="#" data-toggle="tooltip" data-placement="top" title="Twitter">
-                  <i class="socicon-twitter"></i>
-                </a>
-                <a class="social-button shape-circle sb-instagram" href="#" data-toggle="tooltip" data-placement="top" title="Instagram">
-                  <i class="socicon-instagram"></i>
-                </a>
-                <a class="social-button shape-circle sb-google-plus" href="#" data-toggle="tooltip" data-placement="top" title="Google +">
-                  <i class="socicon-googleplus"></i>
-                </a>
-              </div>
+
             </div>
             <div class="sp-buttons mt-2 mb-2">
-              <!-- <button class="btn btn-outline-secondary btn-sm btn-wishlist" data-toggle="tooltip" title="Whishlist">
-                <i class="icon-heart"></i>
-              </button> -->
               <button class="btn btn-primary" (click)="onAddToCart()">
-                <i class="icon-bag"></i> Add to Cart
+                <i class="icon-bag"></i> Agregar a Cotización
               </button>
             </div>
           </div>
