--- a/src/app/products/products-list-item/products-list-item.component.html
+++ b/src/app/products/products-list-item/products-list-item.component.html
@@ -1,13 +1,9 @@
 <div class="product-card" [ngClass]="{'product-list': displayMode === 'list'}">
-
-  <div *ngIf="product.reduction" class="product-badge text-danger">{{ product.reduction }}% Off</div>
-
-  <div class="product-rating">
-    <app-rating-stars [rating]="product.currentRating"></app-rating-stars>
-  </div>
-
+  <!--<div *ngIf="product.reduction" class="product-badge text-danger">{{ product.reduction }}% Off</div>-->
   <a class="product-thumb" [ngClass]="{'loading': imageLoading}" routerLink="/products/{{product.id}}">
-    <img [hidden]="imageLoading" (load)="onImageLoad()" src="{{product.imageURLs[0]}}" alt="{{product.name}}"/>
+    <img [hidden]="imageLoading" (load)="onImageLoad()"
+         src="https://firebasestorage.googleapis.com/v0/b/bargain-online.appspot.com/o/{{product.imageURLs}}?alt=media"
+         alt="{{product.name}}"/>
   </a>
   <div class="product-info">
     <h3 class="product-title">
@@ -16,11 +12,7 @@
     <h4 class="product-price"><app-price [product]="product"></app-price></h4>
     <p *ngIf="displayMode === 'list'" class="hidden-xs-down">{{product.description}}</p>
     <div class="product-buttons">
-      <!-- <button class="btn btn-outline-secondary btn-sm btn-wishlist" data-toggle="tooltip" title="Whishlist">
-        <i class="icon-heart"></i>
-      </button> -->
-      <button class="btn btn-outline-primary btn-sm" (click)="onAddToCart()">Add to Cart</button>
-
+      <button class="btn btn-outline-primary btn-sm" (click)="onAddToCart()">Agregar a Cotización</button>
       <button *ngIf="user && user.roles.admin" class="btn btn-primary btn-sm" routerLink="/admin/edit/{{product.id}}">
         Edit
       </button>
