--- a/src/app/products/products-list/products-list.component.html
+++ b/src/app/products/products-list/products-list.component.html
@@ -59,7 +59,7 @@
     <!-- Pagination-->
     <nav *ngIf="pager.pages && pager.pages.length && (uiService.displayMode$ | async) ==='grid'"class="pagination">
         <div class="column text-left hidden-xs-down">
-            <a class="btn btn-outline-secondary btn-sm" [ngClass]="{disabled:pager.currentPage === 1}" (click)="setPage(pager.currentPage - 1)"><i class="icon-arrow-left"></i>&nbsp;Previous
+            <a class="btn btn-outline-secondary btn-sm" [ngClass]="{disabled:pager.currentPage === 1}" (click)="setPage(pager.currentPage - 1)"><i class="icon-arrow-left"></i>&nbsp;Anterior
             </a>
         </div>
         <div class="column text-center">
@@ -70,7 +70,7 @@
             </ul>
         </div>
         <div class="column text-right hidden-xs-down">
-            <a class="btn btn-outline-secondary btn-sm" [ngClass]="{disabled:pager.currentPage === pager.totalPages}" (click)="setPage(pager.currentPage + 1)">Next&nbsp;
+            <a class="btn btn-outline-secondary btn-sm" [ngClass]="{disabled:pager.currentPage === pager.totalPages}" (click)="setPage(pager.currentPage + 1)">Siguiente&nbsp;
                 <i class="icon-arrow-right"></i>
             </a>
         </div>
