--- a/src/app/core/header/toolbar/cart/cart.component.html
+++ b/src/app/core/header/toolbar/cart/cart.component.html
@@ -36,7 +36,7 @@
         <a class="btn btn-sm btn-block btn-secondary" routerLink="/cart">View Cart</a>
       </div>
       <div class="column">
-        <a class="btn btn-sm btn-block btn-success" routerLink="/checkout">Checkout</a>
+        <a class="btn btn-sm btn-block btn-success">Enviar Cotización</a>
       </div>
     </div>
   </div>
