--- a/src/app/core/header/navigation-main/navigation-main.component.html
+++ b/src/app/core/header/navigation-main/navigation-main.component.html
@@ -3,7 +3,9 @@
     <ul>
         <li routerLinkActive="active">
             <a routerLink="/home" href="">
-                <span>Home</span>
+                <img
+                  src="https://firebasestorage.googleapis.com/v0/b/bargain-online.appspot.com/o/product-images%2Fbargain.png?alt=media&token=de80e770-1836-4f73-bed9-64a967fab688"
+                width="150">
             </a>
         </li>
         <li routerLinkActive="active">
