removing left menu

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
-<div class="main-wrapper" [ngClass]="{'offcanvas-open': offcanvasService.offcanvasNavigationOpen | async}">
-    <app-navigation-off-canvas></app-navigation-off-canvas>
+<div class="main-wrapper">
     <app-header></app-header>
     <app-content></app-content>
 </div>
