--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -1,4 +1,4 @@
-<app-page-title [title]="router.url === '/account/profile' ? 'My Profile' : 'My Orders'" [children]="[{title: 'Account', link: '/account'}, {title: router.url === '/account/profile' ? 'My Profile' : 'My Orders'}]"></app-page-title>
+<app-page-title [title]="router.url === '/account/profile' ? 'Mi perfil' : 'Mis cotizaciones'" [children]="[{title: 'Account', link: '/account'}, {title: router.url === '/account/profile' ? 'My Profile' : 'My Orders'}]"></app-page-title>
 
 <!-- Page Content-->
 <div class="container padding-bottom-3x mb-2">
