--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,6 +1,4 @@
-<app-page-title title="Cart" [children]="[{title: 'Cart'}]"></app-page-title>
-
-
+<app-page-title title="Cotización" [children]="[{title: 'Cotización'}]"></app-page-title>
       <!-- Page Content-->
       <div class="container padding-bottom-3x mb-1">
 
@@ -9,10 +7,10 @@
           <table class="table">
             <thead>
               <tr>
-                <th>Product Name</th>
-                <th class="text-center">Quantity</th>
-                <th class="text-center">Price</th>
-                <th class="text-center">Subtotal</th>
+                <th>Producto</th>
+                <th class="text-center">Cantidad</th>
+                <!--<th class="text-center">Price</th>-->
+                <!--<th class="text-center">Subtotal</th>-->
                 <th class="text-right">
                   <button class="btn btn-sm btn-outline-danger" (click)="onClearCart($event)">Limpiar lista</button>
                 </th>
@@ -47,8 +45,8 @@
                     </div>
                   </div>
                 </td>
-                <td class="text-center text-lg text-medium"><app-price [product]="item.product"></app-price></td>
-                <td class="text-center text-lg text-medium">{{ (item.product.price * item.amount) | currency }}</td>
+                <!--<td class="text-center text-lg text-medium"><app-price [product]="item.product"></app-price></td>-->
+                <!--<td class="text-center text-lg text-medium">{{ (item.product.price * item.amount) | currency }}</td>-->
                 <td class="text-right">
                   <a class="remove-from-cart"
                     href="#"
@@ -64,7 +62,7 @@
             <ng-template #noItemsInCart>
               <tbody>
                 <tr>
-                  <td colspan="5">There are no items in your cart..</td>
+                  <td colspan="5">No hay productos en la cotización</td>
                 </tr>
               </tbody>
             </ng-template>
@@ -72,15 +70,17 @@
           </table>
         </div>
 
+        <!--
         <div class="shopping-cart-footer">
           <div class="column text-lg">Total:
             <span class="text-medium">{{ total | currency }}</span>
           </div>
         </div>
+        -->
         <div class="shopping-cart-footer">
           <div class="column">
             <a class="btn btn-outline-secondary" routerLink="/products">
-              <i class="icon-arrow-left"></i>&nbsp;Back to Shopping</a>
+              <i class="icon-arrow-left"></i>&nbsp;Buscar productos</a>
           </div>
           <div class="column">
             <a class="btn btn-success" href="javascript:void(0)" (click)="sendRequest()">Enviar Cotización</a>
