--- a/src/app/account/register-login/register-login.component.html
+++ b/src/app/account/register-login/register-login.component.html
@@ -1,4 +1,4 @@
-  <app-page-title title="Login / Register Account" [children]="[{title: 'Account', link: '/account'}, {title: 'Login / Register'}]"></app-page-title>
+  <app-page-title title="Login / Registrar Cuenta" [children]="[{title: 'Account', link: '/account'}, {title: 'Login / Registrar'}]"></app-page-title>
 
   <!-- Page Content-->
   <div class="container padding-bottom-3x mb-2">
@@ -13,21 +13,21 @@
               <i class="icon-mail"></i>
             </span>
             <div *ngIf="!loginForm.get('email').valid && loginForm.get('email').touched" class="form-control-feedback">
-              Be sure to enter a valid, existing Email.
+              Digite un email valido
             </div>
           </div>
           <div class="form-group input-group" [ngClass]="{'has-danger': !loginForm.get('password').valid && loginForm.get('password').touched}">
-            <input class="form-control" formControlName="password" type="password" placeholder="Password" required="">
+            <input class="form-control" formControlName="password" type="password" placeholder="Contraseña" required="">
             <span class="input-group-addon">
               <i class="icon-lock"></i>
             </span>
             <div *ngIf="!loginForm.get('password').valid && loginForm.get('password').touched" class="form-control-feedback">
-              The entered password seems to be wrong..
+              La contraseña no puede estar vacía
             </div>
           </div>
 
           <div class="text-center text-sm-right">
-            <button [disabled]="!loginForm.valid"class="btn btn-primary margin-bottom-none" type="submit">Login</button>
+            <button [disabled]="!loginForm.valid"class="btn btn-primary margin-bottom-none" type="submit">Ingresar</button>
           </div>
         </form>
       </div>
@@ -128,7 +128,7 @@
               </div>
             </div>
 
-            <button [disabled]="!registerForm.valid" class="btn btn-primary margin-bottom-none" type="submit">Register</button>
+            <button [disabled]="!registerForm.valid" class="btn btn-primary margin-bottom-none" type="submit">Registrar</button>
           </div>
         </form>
       </div>
