fixing add producto

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -10,7 +10,7 @@
   <div class="toolbar">
     <div class="inner">
       <div class="tools">
-        {{ user && user.name }}
+        {{ user && user.email }}
         <div class="search">
           <i (click)="showSearch = true" class="icon-search"></i>
         </div>
