--- a/src/app/products/products-list/products-list.component.html
+++ b/src/app/products/products-list/products-list.component.html
@@ -1,4 +1,4 @@
-<app-page-title title="Products" [children]="[{title: 'Products'}]"></app-page-title>
+<app-page-title title="Products" [children]="[{title: 'Productos'}]"></app-page-title>
 
 <!-- Page Content-->
 <div class="container padding-bottom-3x mb-1">
@@ -6,22 +6,22 @@
     <div class="shop-toolbar padding-bottom-1x mb-2">
         <div class="column">
             <div class="shop-sorting">
-                <label for="sorting">Sort by:</label>
+                <label for="sorting">Ordenar por:</label>
                 <select class="form-control" id="sorting" #selectSort (change)="onSort(selectSort.value)">
-                    <option value="date:reverse" [selected]="(uiService.sorting$ | async) === 'date:reverse'">Newest Articles</option>
-                    <option value="price" [selected]="(uiService.sorting$ | async) === 'price'">Low - High Price</option>
-                    <option value="price:reverse" [selected]="(uiService.sorting$ | async) === 'price:reverse'">High - Low Price</option>
-                    <option value="name" [selected]="(uiService.sorting$ | async) === 'name'">A - Z Order</option>
-                    <option value="name:reverse" [selected]="(uiService.sorting$ | async) === 'name:reverse'">Z - A Order</option>
+                    <option value="date:reverse" [selected]="(uiService.sorting$ | async) === 'date:reverse'">Nuevos productos</option>
+                    <option value="price" [selected]="(uiService.sorting$ | async) === 'price'">Mayor Precio</option>
+                    <option value="price:reverse" [selected]="(uiService.sorting$ | async) === 'price:reverse'">Menor Precio</option>
+                    <option value="name" [selected]="(uiService.sorting$ | async) === 'name'">Ordenar A - Z</option>
+                    <option value="name:reverse" [selected]="(uiService.sorting$ | async) === 'name:reverse'">Ordenar Z - A</option>
                 </select>
-                <span class="text-muted">Showing:&nbsp;</span>
-                <span>1 - 12 items</span>
+                <span class="text-muted">Mostrando:&nbsp;</span>
+                <span>1 - 12 productos</span>
             </div>
         </div>
         <div class="column">
             <a *ngIf="user && user.roles.admin" class="btn btn-primary mt-0 mr-0 align-top" routerLink="/admin/add" href="">
                 <i class="icon-plus"></i>
-                <span> Add Product</span>
+                <span> Agregar Producto</span>
             </a>
             <div class="shop-view">
                 <a href="" class="grid-view" [ngClass]="{active: (uiService.displayMode$ | async) === 'grid'}" (click)="onDisplayModeChange('grid', $event)">
