--- a/src/app/provider/add-edit/add-edit.component.html
+++ b/src/app/provider/add-edit/add-edit.component.html
@@ -46,7 +46,7 @@
         </div>
 
         <div class="form-group row">
-          <div class="col-10" *ngIf="product.imageURLs.length">
+          <div class="col-10" *ngIf="product && product.imageURLs.length">
             <img src="https://firebasestorage.googleapis.com/v0/b/bargain-online.appspot.com/o/{{product.imageURLs}}?alt=media" width="450">
           </div>
         </div>
