--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -1,4 +1,6 @@
-<app-page-title [title]="router.url === '/account/profile' ? 'Mi perfil' : 'Mis cotizaciones'" [children]="[{title: 'Account', link: '/account'}, {title: router.url === '/account/profile' ? 'My Profile' : 'My Orders'}]"></app-page-title>
+<app-page-title [title]="router.url === '/account/offer' ? 'Panel Proveedor' : 'Panel Cliente'"
+                [children]="[{title: 'Account', link: '/account'}, {title: 'Mi Panel'}]">
+</app-page-title>
 
 <!-- Page Content-->
 <div class="container padding-bottom-3x mb-2">
@@ -10,19 +12,21 @@
         <div class="user-info">
           <div *ngIf="user" class="user-data">
             <h4>{{ user.firstName }} {{ user.lastName }}</h4>
-            <span>{{ user.email }} <span>(Admin)</span></span>
+            <span>{{ user.email }} </span>
           </div>
         </div>
       </aside>
       <nav class="list-group">
-        <!--
-        <a class="list-group-item" routerLinkActive="active" routerLink="/account/profile">
-          <i class="icon-head"></i>Profile
-        </a>
-        -->
-
-        <a class="list-group-item with-badge" routerLinkActive="active" routerLink="/account/requests" href="">
+        <a *ngIf="user && user.role === 'CLIENT'" class="list-group-item with-badge" routerLinkActive="active" routerLink="/account/requests" href="">
           <i class="icon-bag"></i>Cotizaciones
+        </a>
+
+        <a *ngIf="user && user.role === 'CLIENT'" class="list-group-item" routerLinkActive="active" routerLink="/account/offer">
+          <i class="icon-head"></i>Ofertas
+        </a>
+
+        <a *ngIf="user && user.role === 'PROVIDER'" class="list-group-item with-badge" routerLinkActive="active" routerLink="/account/provider" href="">
+          <i class="icon-bag"></i>Cotizaciones Clientes
         </a>
       </nav>
     </div>
