--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -18,7 +18,7 @@
           <a *ngIf="!user; else whenLoggedIn" routerLink="/register-login"></a>
 
           <ng-template #whenLoggedIn>
-            <a routerLink="/account/profile"></a>
+            <a routerLink="/account/"></a>
           </ng-template>
 
           <i class="icon-head"></i>
