renaming account client

--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -17,7 +17,7 @@
         </div>
       </aside>
       <nav class="list-group">
-        <a *ngIf="user && user.role === 'CLIENT'" class="list-group-item with-badge" routerLinkActive="active" routerLink="/account/requests" href="">
+        <a *ngIf="user && user.role === 'CLIENT'" class="list-group-item with-badge" routerLinkActive="active" routerLink="/account/client" href="">
           <i class="icon-bag"></i>Cotizaciones
         </a>
 
