--- a/src/app/core/header/navigation-main/navigation-main.component.html
+++ b/src/app/core/header/navigation-main/navigation-main.component.html
@@ -14,7 +14,7 @@
             </a>
         </li>
         <li routerLinkActive="active" *ngIf="user && user['role'] === 'CLIENT'">
-            <a routerLink="/account/requests" href="">
+            <a routerLink="/account/client" href="">
                 <span>Mis Cotizaciones</span>
             </a>
         </li>
