--- a/src/app/account/external-provider/external-provider.component.html
+++ b/src/app/account/external-provider/external-provider.component.html
@@ -4,7 +4,7 @@
 <div class="container padding-bottom-3x mb-2">
   <div class="row">
     <div class="col-md-8">
-      <form class="login-box" [formGroup]="loginForm" (ngSubmit)="onLogin()">
+      <form class="login-box" [formGroup]="payloadForm" (ngSubmit)="onLogin()">
         <h3 class="margin-bottom-1x">Información de conexión al sistema de Bargain-online</h3>
 
         <div class="alert alert-secondary" role="alert">
@@ -53,17 +53,13 @@
         </div>
 
         <b> Url para carga de datos </b>
-        <div class="form-group input-group" [ngClass]="{'has-danger': !loginForm.get('email').valid && loginForm.get('email').touched}">
+        <div class="form-group input-group" [ngClass]="{'has-danger': !payloadForm.get('payload').valid && payloadForm.get('payload').touched}">
           <br>
-          <input class="form-control" formControlName="email" type="email" placeholder="Payload Url" required="">
-          <div *ngIf="!loginForm.get('email').valid && loginForm.get('email').touched" class="form-control-feedback">
-            La url de consumo de payload no puede estar vacía
-          </div>
+          <input class="form-control" formControlName="payload" type="payload" placeholder="Payload Url" required="">
         </div>
 
         <div class="text-center text-sm-right">
-          <button [disabled]="!loginForm.valid"class="btn btn-primary margin-bottom-none" type="submit">Consumir datos</button>
-          <button [disabled]="!loginForm.valid"class="btn btn-primary margin-bottom-none" type="submit">Guardar</button>
+          <button [disabled]="!payloadForm.valid"class="btn btn-primary margin-bottom-none" type="submit">Consumir datos</button>
         </div>
       </form>
     </div>
