--- a/src/app/account/external-provider/external-provider.component.html
+++ b/src/app/account/external-provider/external-provider.component.html
@@ -4,7 +4,7 @@
 <div class="container padding-bottom-3x mb-2">
   <div class="row">
     <div class="col-md-8">
-      <form class="login-box" [formGroup]="payloadForm" (ngSubmit)="onLogin()">
+      <form class="login-box" [formGroup]="payloadForm" (ngSubmit)="submit()">
         <h3 class="margin-bottom-1x">Información de conexión al sistema de Bargain-online</h3>
 
         <div class="alert alert-secondary" role="alert">
@@ -52,10 +52,19 @@
           </div>
         </div>
 
-        <b> Url para carga de datos </b>
-        <div class="form-group input-group" [ngClass]="{'has-danger': !payloadForm.get('payload').valid && payloadForm.get('payload').touched}">
-          <br>
-          <input class="form-control" formControlName="payload" type="payload" placeholder="Payload Url" required="">
+        <div class="alert alert-secondary" role="alert">
+          <b>Url para carga de datos</b>
+
+          <div class="types">
+            <input type="radio" id="json" name="dataType" formControlName="dataType" value="1" (click)="dataTypeEvent(1)">
+            <label for="json">JSON</label>
+            <label> </label>
+            <input type="radio" id="xml" name="dataType" formControlName="dataType" value="2" (click)="dataTypeEvent(2)">
+            <label for="xml">XML</label>
+          </div>
+          <div class="form-group input-group" [ngClass]="{'has-danger': !payloadForm.get('payload').valid && payloadForm.get('payload').touched}">
+            <input class="form-control" formControlName="payload" type="payload" placeholder="Payload Url" required="">
+          </div>
         </div>
 
         <div class="text-center text-sm-right">
